Refactoring order-service, delivery-service